--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -24,10 +24,10 @@
    ------------------------------------------------ */
 
 #nav-wrap {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 10;
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*z-index: 1;*/
     width: auto;
     font: 14px 'source_sans_probold', sans-serif;
     letter-spacing: 1.5px;
@@ -36,7 +36,8 @@
 }
 
 #nav-wrap > div {
-    position: relative;
+    position: fixed;
+    z-index: 1;
     top: 0;
     right: 30px;
     width: 48px;
@@ -63,10 +64,19 @@
 }
 #nav-wrap > div:after { top: 60%; }
 
+#nav-exit {
+    position: absolute !important;
+    right: 0 !important;
+    z-index: 1 !important;
+    width: 100% !important;
+    height: 100% !important;
+    opacity: 0 !important;
+}
+
 ul#nav {
-    position: relative;
-    top: 12px;
-    right: 0;
+    position: fixed;
+    top: 50px;
+    right: 0 !important;
     height: auto;
     min-height: 48px;
     width: auto;
@@ -74,7 +84,7 @@ ul#nav {
     display: block;
     visibility: hidden;
     opacity: 0;
-    z-index: -1;
+    z-index: 10;
     clear: both;
     float: right;
     padding: 18px 20px 30px;
@@ -450,10 +460,9 @@ header #scroll-down a:hover { background-color: #11ABB0; }
 #testimonials {
     position: relative;
     width: 100%;
-    min-height: 800px;
     padding: 96px 0 64px;
 
-    background: url(../images/testimonials-background.jpg) no-repeat fixed center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url(../images/testimonials-background.jpg) no-repeat fixed center center;
     background-size: cover !important;
     -webkit-background-size: cover !important;
     overflow: hidden;
@@ -475,15 +484,10 @@ header #scroll-down a:hover { background-color: #11ABB0; }
     padding: 1% 2% 1% 4%;
     margin: 0 0 30px 0;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 1);
-    /*background: rgba(0, 0, 0, 0.4);*/
     border-radius: 4%;
-    /*width: 300px;*/
 }
 
 #testimonials blockquote p {
-    font-size: 18px;
-    letter-spacing: 1px;
-    line-height: 36px;
     color: #FFFFFF;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 1);
 }
@@ -503,9 +507,7 @@ header #scroll-down a:hover { background-color: #11ABB0; }
 }
 
 .carousel .slider {
-    width: 80%;
     max-width: 900px;
-    min-height: 600px;
 }
 
 .carousel .slider a.previousButton { left: -10px; }
@@ -561,7 +563,7 @@ header #scroll-down a:hover { background-color: #11ABB0; }
     .carousel .slider a.previousButton:hover { transform: scale(1) translateY(-200%) !important; }
 
     .carousel .carousel-arrow { display: block; }
-    .carousel .slider {  min-height: 400px; }
+    .carousel .slider {  min-height: 400px; width: 80%; }
     .carousel .track .slide { width: 80%; max-width: 720px; }
     .carousel .carousel-slides .carousel-slide { margin-left: 60px; }
     .carousel .carousel-arrow { display: block; }
